[package]
name = "map"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["v6", "v7"]
v6 = []
v7 = []

[dependencies]
thiserror = "1.0.24"
bitflags = "1.2.1"
byteorder = "1.4.3"