[package]
name = "render"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["d2", "d3"]
d2 = ["embedded-graphics"]
d3 = []

[dependencies]
map = { path = "../map" }
embedded-graphics = { version = "0.6.2", optional = true }
nalgebra-glm = "0.11.0"
line_drawing = "0.8.0"
bitflags = "1.2.1"

[dev-dependencies]
map = { path = "../map" }
minifb = "0.19.3"
