[package]
name = "render"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["d2", "d3", "controller"]
d2 = ["bitflags", "embedded-graphics", "nalgebra-glm"]
d3 = ["heapless", "nalgebra-glm", "cfg-if"]
controller = ["bitflags"]

[dependencies]
map = { path = "../map" }
embedded-graphics = { version = "0.6.2", optional = true }
nalgebra-glm = { version = "0.11.0", optional = true }
bitflags = { version = "1.2.1", optional = true }
cfg-if = { version = "1.0.0", optional = true }
heapless = { version = "0.7.0", optional = true }

[dev-dependencies]
map = { path = "../map" }
minifb = "0.19.3"
