[package]
name = "wasm"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
map = { path = "../map" }
render = { path = "../render", default-features = false, features = ["d3", "controller"] }
wasm-bindgen = "0.2.73"
web-sys = { version = "0.3.46", features = ["CanvasRenderingContext2d", "ImageData"] }
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"
